--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ section.main {
 }
 
 .face {
-  background-image: url(./face.jpg);
+  background-image: url(https://gitcdn.xyz/cdn/ealush/me/09c4cfcb13e992fa6fd45ca0ce088664bf20ce38/face.jpg);
   border-radius: 50%;
   background-size: 8em;
   min-height: 8em;
