--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+:root {
+  --bg-dark: #212121;
+}
+
 body {
-    background-color: #212121;
+    background-color: var(--bg-dark);
     color: #9E9E9E;
     margin: 0;
     padding: 0;
@@ -273,6 +277,10 @@ section.main {
     width: 100%;
     height: calc(100vh - 6em);
     padding: 3em 0;
+}
+
+section.content {
+  background: var(--bg-dark);
 }
 
 .links li {
