--- a/scripts/update/index.tmpl
+++ b/scripts/update/index.tmpl
@@ -54,6 +54,9 @@
           <h2 class="center">VIDEO</h2>
           <ul class="center links">
             <li>
+              <a href="https://www.youtube.com/watch?v=2D0LmCtVTSk" target="_blank" rel="noopener noreferrer">What you need to know about contributing to open source</a> <small>(Hebrew)</small>
+            </li>
+            <li>
               <a href="https://www.youtube.com/watch?v=mL9ocOBg2y4" target="_blank"
                 rel="noopener noreferrer">It can't be that easy! Form validations with Vest</a>
             </li>
