--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@
   --title-color: #333;
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg: #333;
+    --title-color: #fff;
+  }
+}
+
 body {
   background-color: var(--bg);
   color: #9e9e9e;
