TODO: Replace placeholder code

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ section.links {
 }
 
 .face {
-  background-image: url(https://cdn.jsdelivr.net/gh/ealush/ealush.github.io@master/face.jpg);
+  background-image: url(https://cdn.jsdelivr.net/gh/ealush/ealush.github.io@master/face_01_23.jpg);
   border-radius: 50%;
   background-size: 8em;
   min-height: 8em;
