--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@
     --bg: #333;
     --title-color: #fff;
   }
+
+  body {
+    color: #9e9e9e;
+  }
 }
 
 body {
   background-color: var(--bg);
-  color: #9e9e9e;
+  color: #333;
   margin: 0;
   padding: 0;
   font-size: 18px;
@@ -58,6 +62,10 @@ section.links {
 a {
   text-decoration: none;
   color: #e91e63;
+}
+
+a,
+.no-link {
   padding: 4px 6px;
 }
 
@@ -71,6 +79,10 @@ a:hover {
 
 a:active {
   color: #ff387d;
+}
+
+small {
+  color: #9e9e9e;
 }
 
 ul,
