--- a/style.css
+++ b/style.css
@@ -17,22 +17,28 @@
 
 @keyframes imageFilter {
   0% {
-    filter: saturate(100%) blur(7px) contrast(100%);
+    filter: saturate(100%) blur(7px) contrast(100%) brightness(100%)
+      hue-rotate(0deg);
   }
   15% {
-    filter: saturate(150%) blur(9px) contrast(200%);
+    filter: saturate(120%) blur(11px) contrast(120%) brightness(110%)
+      hue-rotate(10deg);
   }
   25% {
-    filter: saturate(150%) blur(10px) contrast(120%);
+    filter: saturate(120%) blur(8px) contrast(170%) brightness(120%)
+      hue-rotate(20deg);
   }
   50% {
-    filter: saturate(220%) blur(15px) contrast(230%);
+    filter: saturate(130%) blur(9px) contrast(130%) brightness(130%)
+      hue-rotate(30deg);
   }
   75% {
-    filter: saturate(200%) blur(10px) contrast(150%);
+    filter: saturate(120%) blur(10px) contrast(120%) brightness(120%)
+      hue-rotate(20deg);
   }
   100% {
-    filter: saturate(100%) blur(7px) contrast(100%);
+    filter: saturate(100%) blur(7px) contrast(100%) brightness(100%)
+      hue-rotate(0deg);
   }
 
   /* opacity */
@@ -40,29 +46,36 @@
     opacity: 1;
   }
   15% {
-    opacity: 0.8;
+    opacity: 0.5;
   }
   25% {
-    opacity: 0.7;
+    opacity: 0.6;
   }
   50% {
     opacity: 0.4;
   }
   75% {
-    opacity: 0.7;
+    opacity: 0.6;
   }
   100% {
     opacity: 1;
   }
 
+  /* rotation */
   0% {
     transform: translate(-50%, -50%) rotate(0deg);
   }
+  10% {
+    transform: translate(-50%, -50%) rotate(-5deg);
+  }
   25% {
-    transform: translate(-50%, -50%) rotate(10deg);
+    transform: translate(-50%, -50%) rotate(4deg);
   }
   50% {
-    transform: translate(-50%, -50%) rotate(-10deg);
+    transform: translate(-50%, -50%) rotate(-5deg);
+  }
+  75% {
+    transform: translate(-50%, -50%) rotate(5deg);
   }
   100% {
     transform: translate(-50%, -50%) rotate(0deg);
@@ -118,7 +131,7 @@ section.links {
   min-height: 110%;
   width: 110%;
   background-size: 110%;
-  animation: imageFilter 10s infinite;
+  animation: imageFilter 25s infinite;
 }
 
 .face:after {
