I CAN HAZ PYTHON, I CAN HAZ INDENTS

--- a/style.css
+++ b/style.css
@@ -186,6 +186,10 @@ a:active {
   color: var(--color-link-active);
 }
 
+small a {
+  color: var(--color-secondary);
+}
+
 small {
   color: var(--color-secondary);
 }
